# AgenticAI_Learnings

career-advisor-ai/: .gitignore  README.md
career-advisor-ai/backend/: .env.example  README.md  pyproject.toml
career-advisor-ai/backend/app/: main.py
career-advisor-ai/backend/app/api/: routes.py
career-advisor-ai/backend/app/core/: config.py
career-advisor-ai/backend/app/domain/: schemas.py
career-advisor-ai/backend/app/prompts/: few_shot.py  personas.py  styles.py
career-advisor-ai/backend/app/services/: deep_agent_service.py  knowledge_base.py  langgraph_workflow.py  llm_factory.py
career-advisor-ai/frontend/: README.md
career-advisor-ai/frontend/src/: App.css  App.tsx  api.ts  types.ts
career-advisor-ai/frontend/src/components/: GraphFlow.tsx  ResponseCard.tsx
prompt-eval-system/: .env.example  README.md  pyproject.toml
prompt-eval-system/app/: __init__.py  config.py  evaluator.py  llm_factory.py  main.py  schemas.py
prompt-eval-system/data/: sample_dataset.json
prompt-playground/: README.md
prompt-playground/backend/: .env.example  prompt_playground.db  pyproject.toml
prompt-playground/backend/app/: main.py
prompt-playground/backend/app/api/: routes.py
prompt-playground/backend/app/core/: config.py  database.py
prompt-playground/backend/app/domain/: schemas.py
prompt-playground/backend/app/services/: llm_factory.py  prompt_runner.py
prompt-playground/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
prompt-playground/frontend/src/: App.tsx  api.ts  index.css  types.ts
prompt-playground/frontend/src/components/: CompareView.tsx  PromptEditor.tsx  Sidebar.tsx  StatsView.tsx  WelcomeScreen.tsx
resume-parser/: .env.example  README.md  pyproject.toml
resume-parser/app/: config.py  file_reader.py  llm_factory.py  main.py  parser.py  schemas.py
safe-chatbot/backend/: .env.example  pyproject.toml
safe-chatbot/backend/app/: main.py
safe-chatbot/backend/app/api/: routes.py
safe-chatbot/backend/app/core/: config.py
safe-chatbot/backend/app/domain/: schemas.py
safe-chatbot/backend/app/guardrails_config/: config.yml  rails.co
safe-chatbot/backend/app/services/: guardrails_ai_validators.py  guardrails_service.py  langgraph_workflow.py  llm_factory.py
safe-chatbot/frontend/: index.html  package-lock.json  package.json
safe-chatbot/frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
safe-chatbot/frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx  WelcomeScreen.tsx
smart-qa-assistant/: README.md
smart-qa-assistant/backend/: .env.example  README.md  pyproject.toml
smart-qa-assistant/backend/app/: main.py
smart-qa-assistant/backend/app/api/: routes.py
smart-qa-assistant/backend/app/core/: config.py
smart-qa-assistant/backend/app/domain/: schemas.py
smart-qa-assistant/backend/app/prompts/: few_shot.py  personas.py  styles.py
smart-qa-assistant/backend/app/services/: langgraph_workflow.py  llm_factory.py
smart-qa-assistant/frontend/: package-lock.json
smart-qa-assistant/frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
smart-qa-assistant/frontend/src/components/: GraphFlow.tsx  ResponseCard.tsx
