[project]
name = "resume-parser"
version = "0.1.0"
description = "AI-powered resume parser – extracts structured JSON from resumes"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.12",
    "langchain-openai>=0.2.12",
    "langchain-anthropic>=0.3.15",
    "langchain-google-genai>=2.1.5",
    "pydantic>=2.10",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40",
    "python-docx>=1.1",
    "PyPDF2>=3.0",
    "openpyxl>=3.1",
    "pillow>=12.2.0",
]
