[project]
name = "prompt-playground-backend"
version = "0.1.0"
description = "Prompt Testing Playground - Compare, version, and track LLM prompt improvements"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "langchain==0.3.12",
  "langchain-openai==0.2.12",
  "langchain-anthropic>=0.3.15",
  "langchain-google-genai>=2.1.5",
  "pydantic-settings==2.6.1",
  "python-dotenv==1.0.1",
  "aiosqlite>=0.20.0",
  "databases[sqlite]>=0.9.0",
]
