[project]
name = "safe-chatbot-backend"
version = "0.1.0"
description = "FastAPI + NVIDIA NeMo Guardrails + Guardrails AI + LangGraph Safe Chatbot"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-core>=0.3.0",
  # NVIDIA NeMo Guardrails — pin <0.20 to avoid the annoy C++ build dep
  "nemoguardrails>=0.10.1,<0.20.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
]
# No [project.optional-dependencies] — guardrails-ai layer is pure-Python.

[tool.uv]
# Build annoy without isolation so SDKROOT env var reaches the C++ compiler.
no-build-isolation-package = ["annoy"]

[tool.uv.extra-build-dependencies]
annoy = ["setuptools", "wheel"]
