[project]
name = "smart-qa-assistant-backend"
version = "0.1.0"
description = "FastAPI + LangChain + LangGraph backend for Smart Q&A Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "langchain==0.3.12",
  "langgraph==0.2.59",
  "langchain-openai==0.2.12",
  "pydantic-settings==2.6.1",
  "python-dotenv==1.0.1",
  "langchain-anthropic>=0.3.15",
  "langchain-google-genai>=2.1.5",
]
